2001-09-19 Baptiste Lepilleur <gaiacrtn@free.fr>

	* examples/cppunittest/makefile.am : added TestSetupTest.(cpp/h)

	* examples/examples.dsw: removed some unnecessary dependencies. 

	* examples/msvc6/HostApp/HostApp.dsp: fixed release configuration

	* src/msvc6/DSPlugIn/DSPlugIn.dsp: fixed release configuration, and
	disabled the custom build command that does not work.

	* include/cppunit/extensions/HelperMacros.h: reordered header to remove
	some warning with VC++.

	* INSTALL-WIN32.txt : detailed what was in each project. Added a FAQ 
	about the failing test case in cppunittest.

2001-09-19  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* README: Describe how to check if libtool is fixed.

	* Makefile.am (dist-hook): Include INSTALL-WIN32.txt in the list
	of files to convert to MSDOS line endings.
	(snapshot): Use ISO-8601 compliant date for filename.
	(ACLOCAL_AMFLAGS): Specify local directory.

2001-09-18  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* include/cppunit/TextTestResult.h: Change include from <iosfwd>
	to <iostream>.  Sugggested by Peer Sommerlund.

	* include/cppunit/Portability.h: Qualify ostrstream with std.
	Suggested by Patrick Hartling.

>>>>>>> 1.69
2001-09-18 Baptiste Lepilleur <gaiacrtn@free.fr>

	* examples/examples.dsw:
	* examples/msvc6/CppUnitTestApp/CppUnitTestApp.dsw:
	* examples/msvc6/HostApp/HostApp.dsw:
	* examples/msvc6/TestPlugIn/TestPlugIn.dsw: Added missing
	project dependency.

	* src/msvc6/DSPlugIn/DSPlugIn.dsp: fixed *.tlb output directory.

	* include/msvc6/testrunner/TestPlugInInterface.h: does not define
	NOMINMAX if already defined.

2001-09-17 Baptiste Lepilleur <gaiacrtn@free.fr>

	* Makefile.am: Added INSTALL-WIN32.txt to EXTRA_DIST.

	* INSTALL-WIN32.txt: added, short documentation for CppUnit and VC++.

	* include/cppunit/extensions/HelperMacros.h: bug #448363, removed 
	an extraneous ';' at the end of CPPUNIT_TEST_SUITE_END macro.

	* examples/cppunittest/TestCallerTest.cpp: bug #448332, fixed